--- a/index.html
+++ b/index.html
@@ -16,3 +16,30 @@
     </body>
     <script type='text/javascript' src='js/script.js'></script>
 </html>
+
+
+
+ <!DOCTYPE html>
+ <html>
+ 	<head>
+ 		<!-- title and styles here.. -->
+ 		        <title>Javascript Activity 2</title>
+        <style>
+            #myTable2 {
+                background-color:yellow;
+            }
+        </style>
+ 	</head>
+ 	<body>
+ 		<!-- same as previous index.html content -->
+ 		    <body>
+        <h1 id='myTitle'>Javascript</h1>
+        <div id='mySubTitle'>Activity2</div>
+
+ 		<hr/>
+ 		<table border=1 id='myTable2'></table>
+ 	</body>
+ 	<script type='text/javascript' src='js/script.js'></script>
+ 	<script type='text/javascript' src='js/data.js'></script>
+ 	<!-- include data.js external link script here.. -->
+ </html>
