--- a/index.html
+++ b/index.html
@@ -1,45 +1,27 @@
-<!-- index.html -->
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Javascript Activity</title>
-        <style>
-            #myTable {
-                background-color:yellow;
-            }
-        </style>
-    </head>
-    <body>
-        <h1 id='myTitle'>Title Heading</h1>
-        <div id='mySubTitle'>Subtitle</div>
-        <table border=1 id='myTable'></table>
-    </body>
-    <script type='text/javascript' src='js/script.js'></script>
-</html>
-
-
-
  <!DOCTYPE html>
  <html>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+
+
+
  	<head>
- 		<!-- title and styles here.. -->
- 		        <title>Javascript Activity 2</title>
-        <style>
-            #myTable2 {
-                background-color:yellow;
-            }
-        </style>
+ 		        <title>Javascript Activity</title>
+
  	</head>
  	<body>
- 		<!-- same as previous index.html content -->
- 		    <body>
-        <h1 id='myTitle'>Javascript</h1>
-        <div id='mySubTitle'>Activity2</div>
 
- 		<hr/>
- 		<table border=1 id='myTable2'></table>
+        <div class="container">
+            <h1 id='myTitle'>MIT - Web Design and Development</h1>
+            <div id='mySubTitle'>Student Profile</div>
+  		   <table border='1' id='myTable3' class="table table-striped"></table>
+        </div>
+
  	</body>
- 	<script type='text/javascript' src='js/script.js'></script>
- 	<script type='text/javascript' src='js/data.js'></script>
- 	<!-- include data.js external link script here.. -->
+<script type='text/javascript' src='js/data.js'></script>
+ 
  </html>
